resources/coffee-http-proxy.yml

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: coffee-proxy
  namespace: coffee
spec:
  virtualhost:
    fqdn: coffees.gsslabs.org
    tls:
      secretName: tlsadmin/admin-tls-secret
  routes:
    - conditions:
      - prefix: /coffee
      services:
        - name: coffee-svc
          port: 80
