resources/coffee-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    projectcontour.io/tls-cert-namespace: tlsadmin
  name: coffee-ingress
  namespace: coffee
spec:
  rules:
  - host: coffee.gsslabs.org
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
