resources/tea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    projectcontour.io/tls-cert-namespace: tlsadmin
  name: tea-ingress
  namespace: tea
spec:
  tls:
  - hosts:
    - teas.gsslabs.org
    secretName: admin-tls-secret
  rules:
  - host: teas.gsslabs.org
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
